--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,129 @@
-theme: jekyll-theme-cayman
+remote_theme: daattali/beautiful-jekyll@3.0.0
+
+baseurl: ""
+url: "https://sandeepnkulkarni.github.io"
+
+# --- Basic options --- #
+
+# Name of website
+title: Sandeep Kulkarni's Website
+
+# Short description of your site
+description: 
+
+# Your name to show in the footer
+author: Sandeep Kulkarni
+
+# --- List of links in the navigation bar --- #
+
+navbar-links:
+  Home: "/"
+  About me: "https://sandeepnkulkarni.github.io"
+
+# --- Logo --- #
+
+# Image to show in the navigation bar - works best with a square image
+# Remove this parameter if you don't want an image in the navbar
+# avatar: "assets/img/sk_logo_medium.png"
+
+# By default, the image is cut into a circle. You can disable this behaviour here.
+# round-avatar: true
+
+# If you want to have an image logo in the top-left corner instead of the title text,
+# then specify the following parameter
+#title-img: "/assets/img/dotnetcore_logo.png"
+
+# How to display the link to your website in the footer
+# Remove this if you don't want a link in the footer
+url-pretty: "https://sandeepnkulkarni.github.io"
+
+# Create a "tags" index page and make tags on each post clickable
+link-tags: true
+
+# Excerpt Word Length - Truncates the excerpt to the specified number of words on the index page
+excerpt_length: 100
+
+# --- Footer options --- #
+
+# Select the social network links that you want to show in the footer.
+# Uncomment the links you want to show and add your information to each one.
+# If you don't want to show a link to an RSS feed, set rss to "false".
+social-network-links:
+  rss: true
+  github: sandeepnkulkarni
+
+# --- Colours / background image --- #
+
+# Personalize the colors in your website. Colour values can be any valid CSS colour
+
+navbar-col: "#C1C8E4"
+navbar-text-col: "#1A1A1D"
+navbar-children-col: "#C1C8E4"
+page-col: "#FFFFFF"
+link-col: "#123C69"
+hover-col: "#44318D"
+footer-col: "#C1C8E4"
+footer-text-col: "#1A1A1D"
+footer-link-col: "#123C69"
+
+# Alternatively, the navbar, footer, and page background can be set to use background images
+# instead of colour
+
+#navbar-img: "/assets/img/bgimage.png"
+#footer-img: "/assets/img/bgimage.png"
+#page-img: "/assets/img/bgimage.png"
+
+# --- Misc --- #
+
+# Character used to separate site title and description in HTML document title
+# and RSS feed title
+title-separator: "-"
+
+# Ruby Date Format to show dates of posts
+date_format: "%B %-d, %Y"
+
+# --- You don't need to touch anything below here (but you can if you want) --- #
+
+# Output options (more information on Jekyll's site)
+timezone: "Asia/Kolkata"
+markdown: kramdown
+highlighter: rouge
+permalink: /:year-:month-:day-:title/
+paginate: 5
+
+kramdown:
+  input: GFM
+
+# Default YAML values (more information on Jekyll's site)
+defaults:
+  -
+    scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
+      comments: true  # add comments to all blog posts
+      social-share: true # add social media sharing buttons to all blog posts
+      readtime: true # add estimated reading time on all blog posts
+  -
+    scope:
+      path: "" # all files
+    values:
+      layout: "page"
+      show-avatar: true
+
+# Exclude these files from production site
+exclude:
+  - CHANGELOG.md
+  - CNAME
+  - Dockerfile
+  - Gemfile
+  - Gemfile.lock
+  - LICENSE
+  - README.md
+  - Vagrantfile
+  - docs/
+
+plugins:
+  - jekyll-paginate
+  - jekyll-sitemap
